--- a/color/dark.css
+++ b/color/dark.css
@@ -1,8 +1,10 @@
 body {
     background-color: black;
     color: white;
-    background: url(../assests/images/hintergrund02.png);
-    background-attachment: fixed;
+    background: url(../assests/images/hintergrund02.png) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
 
