--- a/color/light.css
+++ b/color/light.css
@@ -1,8 +1,10 @@
 body {
     background-color: white;
     color: black;
-    background: url(../assests/images/hintergrund01.png);
-    background-attachment: fixed;
+    background: url(../assests/images/hintergrund01.png) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
 
