--- a/color/all.css
+++ b/color/all.css
@@ -1,3 +1,10 @@
+body {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .block {
     padding: 10px;
     border-width: 0;
