add minecraft on main and fix scaling

--- a/color/dark.css
+++ b/color/dark.css
@@ -1,7 +1,14 @@
 body {
     background-color: black;
     color: white;
-    background: url(../assests/images/hintergrund02.png) no-repeat center center fixed;
+    background: url(../assests/images/hintergrund02.png);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 .block {
