--- a/color/all.css
+++ b/color/all.css
@@ -1,8 +1,5 @@
-body {
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+* {
+    font-family: "Montserrat", sans-serif;
 }
 
 .block {
@@ -16,7 +13,6 @@ body {
     border-radius: 4px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
     margin-bottom: 20px;
-    font-family: "Montserrat", sans-serif;
     font-weight: 500;
     text-decoration: none;
     font-size: 130%;
@@ -28,7 +24,6 @@ body {
 
 .full-block {
     margin-bottom: 20px;
-    font-family: "Montserrat", sans-serif;
     font-weight: 500;
     text-decoration: none;
     font-size: 100%;
@@ -36,7 +31,7 @@ body {
     padding-bottom: 3%;
 }
 
-.full-block.right { 
+.full-block.right {
     padding-left: 50%;
     padding-right: 2.5%;
 }
@@ -44,4 +39,26 @@ body {
 .full-block.left {
     padding-left: 2.5%;
     padding-right: 50%;
+}
+
+button {
+    margin-top: 20px;
+    padding: 5px 0 5px 0;
+    text-align: center;
+    font-size: 18px;
+    width: 200px;
+    border-radius: 10px;
+    border: 1px solid #054069;
+    background-color: #e7f5ff;
+}
+
+.full-block.minecraft {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.85)), url(../assests/images/MC.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
