--- a/color/light.css
+++ b/color/light.css
@@ -1,7 +1,14 @@
 body {
     background-color: white;
     color: black;
-    background: url(../assests/images/hintergrund01.png) no-repeat center center fixed;
+    background: url(../assests/images/hintergrund01.png);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 .block {
