--- a/color/light.css
+++ b/color/light.css
@@ -20,3 +20,14 @@ body {
     text-decoration: underlined;
     color: black;
 }
+
+.full-block.minecraft {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url(../assests/images/MC.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
