coding part and some approvements

--- a/color/light.css
+++ b/color/light.css
@@ -16,13 +16,24 @@ body {
     background: #fff;
 }
 
-.hyperlink {
+a:has(href) {
     text-decoration: underlined;
     color: black;
 }
 
 .full-block.minecraft {
     background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url(../assests/images/MC.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.full-block.coding {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0)), url(../assests/images/coding.jpg);
     color: white;
     background-position: center;
     background-repeat: no-repeat;
