--- a/color/dark.css
+++ b/color/dark.css
@@ -16,13 +16,24 @@ body {
     background: #373737;
 }
 
-.hyperlink {
+a {
     text-decoration: underlined;
     color: white;
 }
 
 .full-block.minecraft {
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(../assests/images/MC.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.full-block.coding {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url(../assests/images/coding.jpg);
     color: white;
     background-position: center;
     background-repeat: no-repeat;
