--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,62 @@
 @import url("color/auto.css");
 @import url("styles/nav.css");
 
-/* RESETS */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Montserrat", sans-serif;
+  text-wrap: normal;
 }
 
-/* Default layout */
+.block {
+  padding: 10px;
+  border-width: 0;
+  border-style: solid;
+  border-top-color: #e0e0e0;
+  border-right-color: #e0e0e0;
+  border-bottom-color: #e0e0e0;
+  border-left-color: #e0e0e0;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 130%;
+  padding-top: 2%;
+  padding-left: 2.5%;
+  padding-right: 4%;
+  padding-bottom: 3%;
+}
+
+.full-block {
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 100%;
+  padding-top: 2%;
+  padding-bottom: 3%;
+}
+
+.full-block.right {
+  padding-left: 50%;
+  padding-right: 5%;
+}
+
+.full-block.left {
+  padding-left: 5%;
+  padding-right: 50%;
+}
+
+button {
+  margin-top: 20px;
+  padding: 5px 0 5px 0;
+  text-align: center;
+  font-size: 18px;
+  width: 200px;
+  border-radius: 10px;
+  border: 1px solid #054069;
+  background-color: #e7f5ff;
+}
 
 body main {
   margin-top: 5%;
@@ -20,4 +68,25 @@ aside {
   position: fixed;
   right: 5%;
   margin-top: 2.5%;
+}
+
+.social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-media img {
+  width: 30px;
+  height: 30px;
+  margin: 0 20px;
+}
+
+ul {
+  list-style-position: inside;
+}
+
+ul ul {
+  list-style: circle;
+  padding-left: 40px;
 }
