--- a/styles.css
+++ b/styles.css
@@ -40,11 +40,19 @@
 .full-block.right {
   padding-left: 50%;
   padding-right: 5%;
+  @media screen and (max-width: 700px) {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
 
 .full-block.left {
   padding-left: 5%;
   padding-right: 50%;
+  @media screen and (max-width: 700px) {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
 
 button {
