--- a/styles/nav.css
+++ b/styles/nav.css
@@ -127,7 +127,7 @@ header nav ul.nav__links li a:hover {
 
 @media screen and (max-width: 700px) {
     .logo {
-        margin-left: 60px;
+        margin-left: 1.5%;
     }
 }
 
