--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,8 @@ aside {
   align-items: center;
 }
 
-.social-media img {
+.social-media img,
+.social-media svg {
   width: 30px;
   height: 30px;
   margin: 0 20px;
