--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,11 @@ button {
   background-color: #e7f5ff;
 }
 
+button a {
+  text-decoration: none;
+  color: black;
+}
+
 body main {
   margin-top: 5%;
   margin-left: 15%;
@@ -98,4 +103,14 @@ ul {
 ul ul {
   list-style: circle;
   padding-left: 40px;
+}
+
+.aboutus,
+footer {
+  text-align: center; 
+  margin-top: 2%;
+}
+
+footer {
+  margin-bottom: 7.5%;
 }
