--- a/color/dark.css
+++ b/color/dark.css
@@ -42,3 +42,14 @@ a {
     -moz-background-size: cover;
     -o-background-size: cover;
 }
+
+.full-block.telepad1 {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url(../assests/images/telepad.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
