update for hypixel zombies

--- a/color/light.css
+++ b/color/light.css
@@ -9,16 +9,21 @@ body {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    background-attachment: fixed;
 }
 
-.block {
+.block, table {
     color: #141618;
     background: #fff;
 }
 
-a:has(href) {
+a {
     text-decoration: underlined;
     color: black;
+}
+
+table thead tr {
+    background: #8f7ec7;
 }
 
 .full-block.minecraft {
@@ -45,6 +50,51 @@ a:has(href) {
 
 .full-block.telepad1 {
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0)), url(../assests/images/telepad.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.full-block.minecraft-hypixel-zombies-dead_end {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0)), url(../assests/images/hypixel-zombies-dead_end.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.full-block.minecraft-hypixel-zombies-bad_blood {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0)), url(../assests/images/hypixel-zombies-bad_blood.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+
+.full-block.minecraft-hypixel-zombies-alien_arcadium {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0)), url(../assests/images/hypixel-zombies-alien_arcadium.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.full-block.minecraft-hypixel-zombies-prison {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0)), url(../assests/images/hypixel-zombies-prison.png);
     color: white;
     background-position: center;
     background-repeat: no-repeat;
