--- a/color/dark.css
+++ b/color/dark.css
@@ -9,9 +9,10 @@ body {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    background-attachment: fixed;
 }
 
-.block {
+.block, table {
     color: #fff;
     background: #373737;
 }
@@ -19,6 +20,10 @@ body {
 a {
     text-decoration: underlined;
     color: white;
+}
+
+table thead tr {
+    background: #36304a;
 }
 
 .full-block.minecraft {
@@ -45,6 +50,51 @@ a {
 
 .full-block.telepad1 {
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url(../assests/images/telepad.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.full-block.minecraft-hypixel-zombies-dead_end {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url(../assests/images/hypixel-zombies-dead_end.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.full-block.minecraft-hypixel-zombies-bad_blood {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url(../assests/images/hypixel-zombies-bad_blood.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+
+.full-block.minecraft-hypixel-zombies-alien_arcadium {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url(../assests/images/hypixel-zombies-alien_arcadium.png);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.full-block.minecraft-hypixel-zombies-prison {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url(../assests/images/hypixel-zombies-prison.png);
     color: white;
     background-position: center;
     background-repeat: no-repeat;
