--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@
   text-wrap: normal;
 }
 
+.blocksite {
+  margin: 7.5% 15% 5% 15%;
+}
+
 .block {
   padding: 10px;
   border-width: 0;
@@ -19,7 +23,7 @@
   border-left-color: #e0e0e0;
   border-radius: 4px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-  margin-bottom: 20px;
+  margin-bottom: 5%;
   font-weight: 500;
   text-decoration: none;
   font-size: 130%;
